test/asm/pc-def.err
ERROR: pc-def.asm(1):
    '@' is not allowed as argument to the DEF function
